--- a/frontend/src/app/components/home/home.component.html
+++ b/frontend/src/app/components/home/home.component.html
@@ -1,3 +1,18 @@
-<p>
-  home works!
-</p>
+<div class="container">
+  <br>
+  <form [formGroup]="formDatos" (submit)="onSubmit(formDatos.value)">
+    <div class="form-group">
+      <label for="nombre">Nombre</label>
+      <input type="text" class="form-control" formControlName="nombre" placeholder="Enter Nombre">
+    </div>
+    <div class="form-group">
+      <label for="apellido">Apellidos</label>
+      <input type="text" class="form-control" formControlName="apellido" placeholder="Enter Apellidos">
+    </div>
+    <div class="form-group">
+      <label for="email">Email address</label>
+      <input type="email" class="form-control" formControlName="email" placeholder="Enter email">
+    </div>
+    <button type="submit" class="btn btn-primary">Submit</button>
+  </form>
+</div>
